# nexus

./: .gitignore  Cargo.toml
graphum/: Cargo.toml  README.md
graphum/src/: lib.rs  mps.rs  spqr.rs
graphum/tests/: addability.rs  boyer_myrvold.rs  contracts.rs  corner_cases.rs  graph_families.rs  k4_chain.rs  kuratowski_subdivisions.rs  large_scale.rs  maximal_planar.rs  more_families.rs  more_randomized.rs  randomized.rs  reindexing.rs  semantics.rs  small_n.rs  split_merge.rs  stress.rs  triangulation_local_flips.rs
graphum/tests/common/: mod.rs
ogdf-sys/: Cargo.toml  README.md  build.rs
ogdf-sys/cpp/include/: mps.hpp  spqr.hpp  types.hpp
ogdf-sys/cpp/src/: mps.cpp  spqr.cpp
ogdf-sys/src/: lib.rs
