[workspace]
resolver = "3"
members = [
    "graphum",
    "ogdf-sys",
]

[workspace.package]
version = "0.3.2"
edition = "2024"
repository = "https://github.com/khoek/nexus"

[workspace.dependencies]
ogdf-sys = { path = "ogdf-sys", version = "0.3" }

autocxx = "0.30"
cxx = "1"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"

[profile.release-lto-debug]
inherits = "release"
codegen-units = 1
lto = "fat"
debug = true
