[package]
name = "graphum"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
description = "Safe wrappers around OGDF planarity routines via ogdf-sys."
readme = "README.md"
repository.workspace = true

[dependencies]
ogdf-sys = { workspace = true }

autocxx = { workspace = true }
cxx = { workspace = true }

[dev-dependencies]
rand = "0.10"
rustworkx-core = "0.17"
