[package]
name = "ogdf-sys"
version.workspace = true
edition.workspace = true
links = "ogdf"
license = "GPL-2.0-only OR GPL-3.0-only"
description = "Unsafe Rust bindings to the OGDF graph drawing library built with autocxx."
readme = "README.md"
repository.workspace = true

[dependencies]
autocxx = { workspace = true }
cxx = { workspace = true }

[build-dependencies]
syntheon = { version = "0.3" }

autocxx-build = "0.30"
cc = "1"
